LOGO CHANGE AND TITLE CHANGE

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
-				<h1>Welcome to my page.</h1>
+				<span class="logo icon C:\Users\Sugandha\Desktop\website\Screenshot 2024-09-23 192318.png"></span>
+				<h1>SUGANDHA ASTHANA</h1>
 				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
 				<br />
 				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
